--- a/index.html
+++ b/index.html
@@ -16,25 +16,35 @@
   </style>
 </head>
 <style>
+  :root {
+    --Yellow: hsl(47, 88%, 63%);
+    --White: hsl(0, 0%, 100%);
+    --Grey: hsl(0, 0%, 50%);
+    --Black: hsl(0, 0%, 7%);
+  }
+  @font-face {
+    font-family: "FigTree";
+    src: url("./assets/fonts/Figtree-VariableFont_wght.ttf") format("truetype");
+  }
   *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
   body{
-    background-color: hsl(47, 88%, 63%);
-    font-family: figtree;
+    background-color: var(--Yellow);
+    font-family: FigTree;
   }
   .container{
     display: flex;
     flex-direction: column;
     outline: 1px solid;
     justify-content: space-around;
-    background-color: hsl(0, 0%, 100%);
+    background-color:var(--White);
     width: 323px;
     height: 502px;
     position: absolute;
-    top: 10%;
+    top: 30%;
     left: 20%;
     border-radius: 20px;
     box-shadow: 10px 10px ;
@@ -50,7 +60,7 @@
   }
   button{
     padding: 4px;
-    background-color: hsl(47, 88%, 63%);
+    background-color: var(--Yellow);
     border: none;
     border-radius: 5px;
     font-weight: 800;
@@ -77,7 +87,7 @@
     left: 24px;
   }
   .text p{
-    color: hsl(0, 0%, 50%);
+    color:var(--Grey);
     font-size: 14px;
     position: relative;
     top: 17px;
